added testing.md file and added testcases and added comments to js filesto fix warnings from jshint

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- Navigation menu bar on top right -->
                 <div class="col toggler-nav nav-menu">
                     <button type="button" class="navbar-toggler toggler-collapsed navbar-toggler-right toggler-btn" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span><i class="fas fa-bars"></i></span>
+                        <span><i class="fas fa-bars bordero"></i></span>
                     </button>
                 <div class="collapse navbar-collapse toggler-nav" id="navbarCollapse">
                     <ul class="navbar-nav ml-auto navright">
@@ -78,14 +78,14 @@
                             </h3>
                             <i class="fas fa-truck"></i>
                     </div>
-                    <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image"  >
+                    <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image" alt="background with indian flag colours">
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-caption carousel_caption2">
                     <h3>You can buy all your favourite Indian <br>Veggies, Fruits, spices and<br>much more in one stop</h3>
                     <i class="fas fa-shopping-cart"></i>
                     </div>
-                    <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image"  >
+                    <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image" alt="background with indian flag colours">
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-caption carousel_caption3">
@@ -93,7 +93,7 @@
                     <button class="btn jumbotron-btn btn-dark btn-order shadow-none" onclick="window.location.href='place_order.html';">
                             Place Order</button>
                     </div>
-                    <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image"  >
+                    <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image" alt="background with indian flag colours">
                 </div>
              </div>
             
@@ -176,7 +176,7 @@
                 <div class="card card_accordion">
                     <div class="card-header weekday" id="Monday">
                         <h2 class="mb-0">
-                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseMon" aria-expanded="false" aria-controls="collapseOne" name="Monday">
+                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseMon" aria-expanded="false" aria-controls="collapseMon" name="Monday">
                             Monday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
@@ -193,7 +193,7 @@
                 <div class="card card_accordion">
                     <div class="card-header weekday" id="Tuesday">
                         <h2 class="mb-0">
-                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseTue" aria-expanded="false" aria-controls="collapseOne" name="Tuesday">
+                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseTue" aria-expanded="false" aria-controls="collapseTue" name="Tuesday">
                             Tuesday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
@@ -210,7 +210,7 @@
                 <div class="card card_accordion">
                     <div class="card-header weekday" id="Wednesday">
                         <h2 class="mb-0">
-                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseWed" aria-expanded="false" aria-controls="collapseOne" name="Wednesday">
+                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseWed" aria-expanded="false" aria-controls="collapseWed" name="Wednesday">
                             Wednesday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
@@ -227,7 +227,7 @@
                 <div class="card card_accordion">
                     <div class="card-header weekday" id="Thursday">
                         <h2 class="mb-0">
-                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseThu" aria-expanded="false" aria-controls="collapseOne" name="Thursday">
+                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseThu" aria-expanded="false" aria-controls="collapseThu" name="Thursday">
                             Thursday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
@@ -244,7 +244,7 @@
                 <div class="card card_accordion">
                     <div class="card-header weekday" id="Friday">
                         <h2 class="mb-0">
-                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseFri" aria-expanded="false" aria-controls="collapseOne" name="Friday">
+                            <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseFri" aria-expanded="false" aria-controls="collapseFri" name="Friday">
                             Friday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
