--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                                 <span><i class="fas fa-phone"></i> :  +31 (0) 5551241357</span> 
                             </li>
                             <li>
-                                <span><i class="fas fa-at"></i> :   desiwagon123@gmail.com</span>
+                                <span><i class="fas fa-at"></i> :   dw.orders123@gmail.com</span>
                             </li>
                             <li>
                                 <span><i class="fas fa-map-marker-alt"></i> :   Netherlands</span>
