changed text for carusel, schedule and location section,added links to html, css validator results

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="carousel-caption carousel_caption1">
-                             <h3>Indian Grocery On Wheels<br> in 5 big cities <br>of Netherlands.
+                             <h3>Your favourite Indian grocer in 5 big cities of Netherlands.
                             </h3>
                             <i class="fas fa-truck"></i>
                     </div>
@@ -82,14 +82,14 @@
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-caption carousel_caption2">
-                    <h3>You can buy all your favourite Indian <br>Veggies, Fruits, spices and<br>much more in one stop</h3>
+                    <h3>Indian Veggies, Fruits, Spices and much more in one stop</h3>
                     <i class="fas fa-shopping-cart"></i>
                     </div>
                     <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image" alt="background with indian flag colours">
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-caption carousel_caption3">
-                    <h3>Place your order today<br> pick them at your desired location</h3>
+                    <h3>Order today and Pick up at your convenient location</h3>
                     <button class="btn jumbotron-btn btn-dark btn-order shadow-none" onclick="window.location.href='place_order.html';">
                             Place Order</button>
                     </div>
@@ -118,9 +118,11 @@
             <div class="col">
                 <div id="schedule-header">
                    <h2 class="schedule-heading">Know our Schedule</h2>
-                    <p class="schedule-text">We receive our consignment from India every saturday.We visit 5 places in Netherlands every week. 
-                        The schedule for which is given below. We are not available on weekends. Please place your orders online to minimise the waiting time at the 
-                    location, as we have the orders packed and ready to be delivered.</p>
+                    <p class="schedule-text">We deliver only fresh stock which are ordered based on your request!! 
+                        Please order online atleast 4 days before we visit your chosen location so that we can make sure all your items 
+                        reach Netherlands on time. We are busy over the weekends to collaborate with our exclusive Indian vendors, 
+                        so we are open for visits only on weekdays. Our scheduled stops are detailed below. 
+                    </p>
                 </div>
             </div>
         </div>
@@ -273,7 +275,9 @@
             <div class ="container map-container">
             <div class="location-header">
                 <h2>Location</h2> 
-                <p>We station at specific location in each city. Please check for the address that we would be stationed at in each city.</p>
+                <p>Our motto since our inception is to go the extra mile to see you smile. 
+                   We have selected the best possible location in each city based on past feedback and availability of large parking area.
+                   This is to ensure a hassle free shopping experience each time.</p>
             </div>
             <div class="container map-wrapper">
                         <div class="row">
