changed the address, lat and lang co-ordinates in map.js and compressed images in index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <td>2</td>
                             <td >Tuesday</td>
                             <td>6 - 9 pm</td>
-                            <td>Uterecht<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
+                            <td>Utrecht<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>3</td>
@@ -289,18 +289,18 @@
                                         <div class="card-info">
                                             <h4 class="card-title">Amsterdam</h4>
                                             <img src="assets/images/map_info/amsterdam.jpg" alt="pic of amsterdam">
-                                            <p class="card-text"><u>Address:</u> Jan van Galenstraat 4, 1051 KM Amsterdam</p>   
+                                            <p class="card-text"><u>Address:</u> Markelerbergpad 1, 1105 AW Amsterdam</p>   
                                             <p class="card-text"><u>Landmark:</u> opp to Basis School</p>
                                             <p class="card-text bg-text">we are at this Location on Monday from 6 to 9pm.</p>
                                         </div>
                                     </div>
                                     <!-- Location Amsterdam end --> 
                                     <!-- Uterecht --> 
-                                    <div class="card location hide" id="Uterecht">
+                                    <div class="card location hide" id="Utrecht">
                                         <div class="card-info">
-                                            <h4 class="card-title">Uterecht</h4>
+                                            <h4 class="card-title">Utrecht</h4>
                                             <img src="assets/images/map_info/uterecht.jpg" alt="pic of uterecht">
-                                            <p class="card-text"><u>Address:</u> Vredenburg, 3511 CW Utrecht</p>   
+                                            <p class="card-text"><u>Address:</u> Vleutensevaart 50, 3532 AD Utrecht</p>   
                                             <p class="card-text"><u>Landmark:</u> opp to Jumbo food market</p>
                                             <p class="card-text bg-text">we are at this Location on Tuesday from 6 to 9pm.</p>
                                         </div>
@@ -311,7 +311,7 @@
                                         <div class="card-info">
                                             <h4 class="card-title">Den Bosch</h4>
                                             <img src="assets/images/map_info/denbosch.jpg" alt="pic of denbosch">
-                                            <p class="card-text"><u>Address:</u> Markt, 5211 GA 's-Hertogenbosch</p>   
+                                            <p class="card-text"><u>Address:</u> Hofvijver 2, 5223 MB 's-Hertogenbosch</p>   
                                             <p class="card-text"><u>Landmark:</u> opp to Bijnkorf</p>
                                             <p class="card-text bg-text">we are at this Location on Wednesday from 6 to 9pm.</p>
                                         </div>
@@ -322,7 +322,7 @@
                                         <div class="card-info">
                                             <h4 class="card-title">Eindhoven</h4>
                                             <img src="assets/images/map_info/eindhoven.jpg" alt="pic of eindhoven">
-                                            <p class="card-text"><u>Address:</u> Wilhelminaplein, 5611 JC Eindhoven</p>   
+                                            <p class="card-text"><u>Address:</u> Sliffertsestraat 304, 5657 AS Eindhoven</p>   
                                             <p class="card-text"><u>Landmark:</u> opp to SGE Kinderijk</p>
                                             <p class="card-text bg-text">we are at this Location on Thurdsday from 6 to 9pm.</p>
                                         </div>
@@ -333,7 +333,7 @@
                                         <div class="card-info">
                                             <h4 class="card-title">Maastricht</h4>
                                             <img src="assets/images/map_info/maastricht.jpg" alt="pic of maastricht">
-                                            <p class="card-text"><u>Address:</u> Mosae Forum 99, 6211 DW Maastricht</p>   
+                                            <p class="card-text"><u>Address:</u> P. de Coubertinweg 3, 6224 AJ Maastricht</p>   
                                             <p class="card-text"><u>Landmark:</u> opp to Bijnkorf</p>
                                             <p class="card-text bg-text">we are at this Location on Friday from 6 to 9pm.</p>
                                         </div>
