changed styles for footer and added additional information for UX in readme

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                             <h4 class="card-title">Maastricht</h4>
                                             <img src="assets/images/map_info/maastricht.jpg" alt="pic of maastricht">
                                             <p class="card-text"><u>Address:</u> P. de Coubertinweg 3, 6224 AJ Maastricht</p>   
-                                            <p class="card-text"><u>Landmark:</u> opp to Bijnkorf</p>
+                                            <p class="card-text"><u>Landmark:</u> opp to Food market</p>
                                             <p class="card-text bg-text">we are at this Location on Friday from 6 to 9pm.</p>
                                         </div>
                                     </div>
@@ -354,8 +354,8 @@
                 <!-- Copyrgiht -->
 	            <div class="col-md-12 col-lg-3 col-footer">
                     <div>
-                        <h5 class="text-center footer-copyright">copyright 2021<br>
-                        <u>Opening Hours</u></h5>
+                        
+                        <h5 class="text-center"><u>Opening Hours</u></h5>
                         <h6 class="text-center">Mon-Fri 6-9 pm<br>
                         Closed on Weekends<br>
                     </h6>
@@ -418,6 +418,7 @@
                                 </a>
                                 </li>
                             </ul>
+                            <h6 class="text-center footer-copyright">copyright 2021</h6>
                         </div>
                     </div>
                     </div>
