--- a/place_order.html
+++ b/place_order.html
@@ -177,15 +177,15 @@
             
     <!-- End of  Place order form-->  
 
-    <!-- Footer -->
+   <!-- Footer -->
         <footer class="footer">
                 <div class="container-fluid footer-container">
                     <div class="row footer-details">
                 <!-- Copyrgiht -->
 	            <div class="col-md-12 col-lg-3 col-footer">
                     <div>
-                        <h5 class="text-center footer-copyright">copyright 2021<br>
-                        <u>Opening Hours</u></h5>
+                        
+                        <h5 class="text-center"><u>Opening Hours</u></h5>
                         <h6 class="text-center">Mon-Fri 6-9 pm<br>
                         Closed on Weekends<br>
                     </h6>
@@ -248,6 +248,7 @@
                                 </a>
                                 </li>
                             </ul>
+                            <h6 class="text-center footer-copyright">copyright 2021</h6>
                         </div>
                     </div>
                     </div>
