--- a/place_order.html
+++ b/place_order.html
@@ -78,7 +78,7 @@
                 <form onsubmit="return sendMail(this);" id="orderForm" name="contactForm">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" class="form-control"  id="name" name="fname" placeholder="Fullname" pattern="[a-zA-z]{1,25}" required title="name cannot be empty and should only contain letters. e.g. John"> 
+                        <input type="text" class="form-control"  id="name" name="fname" placeholder="Fullname" pattern="[a-zA-Z][a-zA-Z\s]*" required title="name cannot be empty and should only contain letters. e.g. John"> 
                     </div>
                     <div class="form-group">
                         <label for="email">Email address</label>
@@ -86,13 +86,13 @@
                     </div>
                     <div class="form-group">
                         <label for="mobile">Mobile Number</label>
-                        <input type="tel" class="form-control" id="mobile" name="mobile" placeholder="6872413575" pattern="[0-9]{10}" required title="mobile cannot be empty and should only contain a 10 digit number. e.g. 0687241357">
+                        <input type="tel" class="form-control" id="mobile" name="mobileno" placeholder="0655541357" pattern="[0-9]{10}" required title="mobile cannot be empty and should only contain a 10 digit number. e.g. 0687241357">
                     </div>
                     <div class="form-group">
                         <label for="location">Location</label>
                         <select class="form-control" id="location" size="1">
                             <option>Amsterdam</option>
-                            <option>Uterecht</option>
+                            <option>Utrecht</option>
                             <option>DenBosch</option>
                             <option>Eindhoven</option>
                             <option>Maastricht</option>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="form-group">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" name="address" value="134 zanddreef Amsterdam" disabled required title="Address cannot be empty.please choose a desired location to get the corresponding address readonly">
+                        <input type="text" class="form-control" id="address" name="address" value="Markelerbergpad 1, 1105 AW Amsterdam" disabled required title="Address cannot be empty.please choose a desired location to get the corresponding address readonly">
                     </div>
                     <div class="form-group row">
                         <div class="col-md-6 col-lg-7">
@@ -166,7 +166,7 @@
                     </div>
                      <div class="form-group">
                         
-                        <textarea class="form-control hide" id="grocList" name="grocerylist" rows="20" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
+                        <textarea class="form-control hideList" id="grocList" name="grocerylist" title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
                     </div>
                     <div class="form-btn">
                         <input type="submit" class="btn btn-form" value="submit">
