fixed font-size for address field in place order form

--- a/place_order.html
+++ b/place_order.html
@@ -73,7 +73,7 @@
 
     <!-- Place order form-->  
     <!--code reference from Bootstrap with modifications-->
-            <div id="place_order">
+            <div class="container form-container" id="place_order">
                 <h3 class ="form-header">Order Now!!! </h3>
                 <form onsubmit="return sendMail(this);" id="orderForm" name="contactForm">
                     <div class="form-group">
@@ -100,7 +100,7 @@
                     </div>
                     <div class="form-group">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" name="address" value="Markelerbergpad 1, 1105 AW Amsterdam" disabled required title="Address cannot be empty.please choose a desired location to get the corresponding address readonly">
+                        <input type="text" class="form-control address-control" id="address" name="address" value="Markelerbergpad 1, 1105 AW Amsterdam" disabled required title="Address cannot be empty.please choose a desired location to get the corresponding address readonly">
                     </div>
                     <div class="form-group row">
                         <div class="col-md-6 col-lg-7">
@@ -166,7 +166,7 @@
                     </div>
                      <div class="form-group">
                         
-                        <textarea class="form-control hideList" id="grocList" name="grocerylist" title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
+                        <textarea class="form-control hideList" id="grocList" name="grocerylist" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
                     </div>
                     <div class="form-btn">
                         <input type="submit" class="btn btn-form" value="submit">
