made validation changes to  getAddress.js and sendMail.js and added styles for footer

--- a/place_order.html
+++ b/place_order.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="form-group">
                         <label for="location">Location</label>
-                        <select class="form-control" id="location" size="1">
+                        <select class="form-control" id="location" name="location" size="1">
                             <option>Amsterdam</option>
                             <option>Utrecht</option>
                             <option>DenBosch</option>
