changed label and text in html files, added new function checklist to addItem.js, modified media queries, added a known bug to testing.md

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image" alt="background with indian flag colours">
                 </div>
              </div>
-            
+            <!-- prev and next links -->
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
@@ -114,60 +114,60 @@
         <section id="schedule">
             <!-- Table for Large and medium screens-->
             <div class="container-fluid schedule-container">
-        <div class="row">
-            <div class="col">
-                <div id="schedule-header">
-                   <h2 class="schedule-heading">Know our Schedule</h2>
-                    <p class="schedule-text">We deliver only fresh stock which are ordered based on your request!! 
-                        Please order online atleast 4 days before we visit your chosen location so that we can make sure all your items 
-                        reach Netherlands on time. We are busy over the weekends to collaborate with our exclusive Indian vendors, 
-                        so we are open for visits only on weekdays. Our scheduled stops are detailed below. 
-                    </p>
+                <div class="row">
+                    <div class="col">
+                        <div id="schedule-header">
+                            <h2 class="schedule-heading">Know our Schedule</h2>
+                            <p class="schedule-text">We deliver only fresh stock which are ordered based on your request!! 
+                            Please order online atleast 4 days before we visit your chosen location so that we can make sure all your items 
+                            reach The Netherlands on time. We are busy over the weekends to collaborate with our exclusive Indian vendors, 
+                            so we are open for visits only on weekdays. Our scheduled stops are detailed below. 
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div id="schedule-table">
-                    <table class ="schedule_table">
-                        <tr>
-                            <th>SNO</th>
-                            <th>Day</th>
-                            <th>Timings</th>
-                            <th>Place</th>
-                        </tr>
-                        <tr class="tablerow">
-                            <td>1</td>
-                            <td>Monday</td>
-                            <td>6 - 9 pm</td>
-                            <td>Amsterdam<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
-                        </tr>
-                        <tr class="tablerow">
-                            <td>2</td>
-                            <td >Tuesday</td>
-                            <td>6 - 9 pm</td>
-                            <td>Utrecht<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
-                        </tr>
-                        <tr class="tablerow">
-                            <td>3</td>
-                            <td>Wednesday</td>
-                            <td>6 - 9 pm</td>
-                            <td>Den Bosch<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
-                        </tr>
-                        <tr class="tablerow">
-                            <td>4</td>
-                            <td>Thursday</td>
-                            <td>6 - 9 pm</td>
-                            <td>Eindhoven  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
-                        </tr>
-                        <tr class="tablerow">
-                            <td>5</td>
-                            <td>Friday</td>
-                            <td>6 - 9 pm</td>
-                            <td>Mastricht  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
-                        </tr>
-                    </table>
-                </div>
+                <div class="row">
+                    <div class="col">
+                        <div id="schedule-table">
+                            <table class ="schedule_table">
+                                <tr>
+                                    <th>SNO</th>
+                                    <th>Day</th>
+                                    <th>Timings</th>
+                                    <th>Place</th>
+                                </tr>
+                                 <tr class="tablerow">
+                                    <td>1</td>
+                                    <td>Monday</td>
+                                    <td>6 - 9 pm</td>
+                                    <td>Amsterdam<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
+                                </tr>
+                                <tr class="tablerow">
+                                    <td>2</td>
+                                    <td >Tuesday</td>
+                                    <td>6 - 9 pm</td>
+                                    <td>Utrecht<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
+                                </tr>
+                                <tr class="tablerow">
+                                    <td>3</td>
+                                    <td>Wednesday</td>
+                                    <td>6 - 9 pm</td>
+                                    <td>Den Bosch<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
+                                </tr>
+                                <tr class="tablerow">
+                                    <td>4</td>
+                                    <td>Thursday</td>
+                                    <td>6 - 9 pm</td>
+                                    <td>Eindhoven  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
+                                </tr>
+                                <tr class="tablerow">
+                                    <td>5</td>
+                                    <td>Friday</td>
+                                    <td>6 - 9 pm</td>
+                                    <td>Maastricht  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
+                                </tr>
+                            </table>
+                        </div>
            <!-- End of Table for Large and medium screens-->
 
      <!-- Accordion for smaller screens-->
@@ -257,11 +257,11 @@
                                     <a href="#Google_map_location" class="btn btn-address">Address</a>
                                 </div>
                             </div>
+                        </div>
                     </div>
-                </div>
+                 </div>
             </div>
         </div>
-    </div>
     </div>
     <!-- End of Accordion for smaller screens-->
     </div>
